# LawDigest

./: .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
.tmp/: pr-body-deploy-environment-rules-v2-codex.md  pr-body-pm2-dev-web-resurrect.md
deploy/: AIRFLOW_DEPLOY.md  DEPLOY_OPERATIONS.md  DEV_WEB_DEPLOY.md  PROD_WEB_DEPLOY.md  TEST_BACKEND_DEPLOY.md  (+11 more)
services/ai/: README.md  pyproject.toml  requirements.txt
services/ai/scripts/: gemini_host_wrapper.sh  save_gemini_cli_summary.py
services/ai/src/lawdigest_ai/: config.py  db.py
services/ai/src/lawdigest_ai/processor/: batch_ingest.py  batch_submit.py  batch_utils.py  gemini_cli_summarizer.py  gemini_repair_pipeline.py  instant_summarizer.py  manual_summary_repair_service.py  provider_batch_service.py  provider_instant_service.py  summarizer.py
services/ai/src/lawdigest_ai/processor/providers/: __init__.py  gemini_batch.py  openai_batch.py  router.py  types.py
services/ai/src/lawdigest_ai/rag/: chatbot.py  embedding.py  vector_store.py
services/ai/src/lawdigest_ai_summarizer/: AISummarizer.py  __init__.py
services/ai/tests/: conftest.py  test_config.py
services/ai/tests/processor/: test_batch_utils.py  test_entrypoints.py  test_gemini_batch_provider.py  test_gemini_cli_summarizer.py  test_gemini_repair_pipeline.py  test_manual_summary_repair_service.py  test_provider_batch_service.py  test_provider_instant_service.py  test_provider_router.py  test_summarizer.py
services/ai/tests/rag/: test_chatbot.py  test_embedding.py  test_vector_store.py
services/ai/tools/: update_vector_db.py
(+528 files in other folders)
