[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lawdigest-ai"
version = "0.1.0"
description = "모두의입법 프로젝트를 위한 AI 요약 전용 서비스"
readme = "README.md"
authors = [
  { name = "Minjae Park", email = "parkmj9260@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "python-dotenv",
  "pydantic",
  "pydantic-ai-slim[openai]",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
